// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcDateRangeFilter > should render if no dates are passed in value prop 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-date-range-filter__trigger"
>
  <ec-stub
    autohide="true"
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <button
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
      type="button"
    >
      <span
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Due date"
      >
        Due date
      </span>
      <!--v-if-->
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </button>
    
    
    <div
      class="ec-filter-popover__filter-content"
    >
      
      <div
        class="ec-date-range-filter"
        data-test="ec-date-range-filter"
      >
        <div
          class="ec-date-range-filter__inputs-wrapper"
        >
          <div
            class="ec-input-field ec-datepicker ec-date-range-filter__from-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-datepicker-1"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                From
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              autocomplete="off"
              class="ec-input-field__input tw-bg-gray-8 ec-input-field__input--has-icon flatpickr-input"
              data-test="ec-date-range-filter__from-input ec-datepicker ec-input-field__input ec-mock ec-tooltip-mock"
              id="ec-datepicker-1"
              type="text"
            />
            <!--v-if-->
            <div
              class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
              data-test="ec-input-field__icon-wrapper"
            >
              <!--v-if-->
              <svg
                class="ec-icon ec-input-field__icon"
                data-test="ec-input-field__icon"
                height="20"
                width="20"
              >
                <use
                  xlink:href="#ec-simple-calendar"
                />
              </svg>
            </div>
            <!--v-if-->
          </div>
          <div
            class="ec-input-field ec-datepicker ec-date-range-filter__to-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-datepicker-3"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                To
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              autocomplete="off"
              class="ec-input-field__input tw-bg-gray-8 ec-input-field__input--has-icon flatpickr-input"
              data-test="ec-date-range-filter__to-input ec-datepicker ec-input-field__input ec-mock ec-tooltip-mock"
              id="ec-datepicker-3"
              type="text"
            />
            <!--v-if-->
            <div
              class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
              data-test="ec-input-field__icon-wrapper"
            >
              <!--v-if-->
              <svg
                class="ec-icon ec-input-field__icon"
                data-test="ec-input-field__icon"
                height="20"
                width="20"
              >
                <use
                  xlink:href="#ec-simple-calendar"
                />
              </svg>
            </div>
            <!--v-if-->
          </div>
        </div>
        <!--v-if-->
        <button
          class="ec-date-range-filter__clear-button"
          data-test="ec-date-range-filter__clear-button"
          disabled=""
          type="button"
        >
          Clear dates
        </button>
      </div>
      
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDateRangeFilter > should render properly when all the props are given 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-date-range-filter__trigger"
>
  <ec-stub
    autohide="true"
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <button
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
      type="button"
    >
      <span
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Due date"
      >
        Due date
      </span>
      <span
        class="ec-badge ec-badge--info ec-filter-popover__badge"
        data-test="ec-badge"
      >
        
        2
        
      </span>
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </button>
    
    
    <div
      class="ec-filter-popover__filter-content"
    >
      
      <div
        class="ec-date-range-filter"
        data-test="ec-date-range-filter"
      >
        <div
          class="ec-date-range-filter__inputs-wrapper"
        >
          <div
            class="ec-input-field ec-datepicker ec-date-range-filter__from-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-datepicker-1"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                From
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              autocomplete="off"
              class="ec-input-field__input tw-bg-gray-8 ec-input-field__input--has-icon flatpickr-input"
              data-test="ec-date-range-filter__from-input ec-datepicker ec-input-field__input ec-mock ec-tooltip-mock"
              id="ec-datepicker-1"
              type="text"
            />
            <!--v-if-->
            <div
              class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
              data-test="ec-input-field__icon-wrapper"
            >
              <!--v-if-->
              <svg
                class="ec-icon ec-input-field__icon"
                data-test="ec-input-field__icon"
                height="20"
                width="20"
              >
                <use
                  xlink:href="#ec-simple-calendar"
                />
              </svg>
            </div>
            <!--v-if-->
          </div>
          <div
            class="ec-input-field ec-datepicker ec-date-range-filter__to-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-datepicker-3"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                To
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              autocomplete="off"
              class="ec-input-field__input tw-bg-gray-8 ec-input-field__input--has-icon flatpickr-input"
              data-test="ec-date-range-filter__to-input ec-datepicker ec-input-field__input ec-mock ec-tooltip-mock"
              id="ec-datepicker-3"
              type="text"
            />
            <!--v-if-->
            <div
              class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
              data-test="ec-input-field__icon-wrapper"
            >
              <!--v-if-->
              <svg
                class="ec-icon ec-input-field__icon"
                data-test="ec-input-field__icon"
                height="20"
                width="20"
              >
                <use
                  xlink:href="#ec-simple-calendar"
                />
              </svg>
            </div>
            <!--v-if-->
          </div>
        </div>
        <!--v-if-->
        <button
          class="ec-date-range-filter__clear-button"
          data-test="ec-date-range-filter__clear-button"
          type="button"
        >
          Clear dates
        </button>
      </div>
      
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDateRangeFilter > should render properly with an error message when the dateRangeErrorMessage is given 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-date-range-filter__trigger"
>
  <ec-stub
    autohide="true"
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <button
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
      type="button"
    >
      <span
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Due date"
      >
        Due date
      </span>
      <span
        class="ec-badge ec-badge--info ec-filter-popover__badge"
        data-test="ec-badge"
      >
        
        2
        
      </span>
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </button>
    
    
    <div
      class="ec-filter-popover__filter-content"
    >
      
      <div
        class="ec-date-range-filter"
        data-test="ec-date-range-filter"
      >
        <div
          class="ec-date-range-filter__inputs-wrapper"
        >
          <div
            class="ec-input-field ec-datepicker ec-date-range-filter__from-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-datepicker-1"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                From
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              autocomplete="off"
              class="ec-input-field__input tw-bg-gray-8 ec-input-field__input--has-icon flatpickr-input"
              data-test="ec-date-range-filter__from-input ec-datepicker ec-input-field__input ec-mock ec-tooltip-mock"
              id="ec-datepicker-1"
              type="text"
            />
            <!--v-if-->
            <div
              class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
              data-test="ec-input-field__icon-wrapper"
            >
              <!--v-if-->
              <svg
                class="ec-icon ec-input-field__icon"
                data-test="ec-input-field__icon"
                height="20"
                width="20"
              >
                <use
                  xlink:href="#ec-simple-calendar"
                />
              </svg>
            </div>
            <!--v-if-->
          </div>
          <div
            class="ec-input-field ec-datepicker ec-date-range-filter__to-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-datepicker-3"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                To
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              autocomplete="off"
              class="ec-input-field__input tw-bg-gray-8 ec-input-field__input--has-icon flatpickr-input"
              data-test="ec-date-range-filter__to-input ec-datepicker ec-input-field__input ec-mock ec-tooltip-mock"
              id="ec-datepicker-3"
              type="text"
            />
            <!--v-if-->
            <div
              class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
              data-test="ec-input-field__icon-wrapper"
            >
              <!--v-if-->
              <svg
                class="ec-icon ec-input-field__icon"
                data-test="ec-input-field__icon"
                height="20"
                width="20"
              >
                <use
                  xlink:href="#ec-simple-calendar"
                />
              </svg>
            </div>
            <!--v-if-->
          </div>
        </div>
        <p
          class="ec-date-range-filter__error-text"
          data-test="ec-date-range-filter__error-text"
        >
          This is the date range error message
        </p>
        <button
          class="ec-date-range-filter__clear-button"
          data-test="ec-date-range-filter__clear-button"
          type="button"
        >
          Clear dates
        </button>
      </div>
      
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDateRangeFilter > should render properly with an error message when the fromErrorMessage is given 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-date-range-filter__trigger"
>
  <ec-stub
    autohide="true"
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <button
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
      type="button"
    >
      <span
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Due date"
      >
        Due date
      </span>
      <span
        class="ec-badge ec-badge--info ec-filter-popover__badge"
        data-test="ec-badge"
      >
        
        2
        
      </span>
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </button>
    
    
    <div
      class="ec-filter-popover__filter-content"
    >
      
      <div
        class="ec-date-range-filter"
        data-test="ec-date-range-filter"
      >
        <div
          class="ec-date-range-filter__inputs-wrapper"
        >
          <div
            class="ec-input-field ec-datepicker ec-date-range-filter__from-input"
            data-test="ec-input-field"
          >
            <!--v-if-->
            <input
              aria-describedby="ec-input-field-error-2"
              autocomplete="off"
              class="ec-input-field__input tw-bg-gray-8 ec-input-field__input--has-error ec-input-field__input--has-icon flatpickr-input"
              data-test="ec-date-range-filter__from-input ec-datepicker ec-input-field__input ec-mock ec-tooltip-mock"
              id="ec-datepicker-1"
              type="text"
            />
            <!--v-if-->
            <div
              class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
              data-test="ec-input-field__icon-wrapper"
            >
              <!--v-if-->
              <svg
                class="ec-icon ec-input-field__icon"
                data-test="ec-input-field__icon"
                height="20"
                width="20"
              >
                <use
                  xlink:href="#ec-simple-calendar"
                />
              </svg>
            </div>
            <div
              class="ec-input-field__error-text"
              data-test="ec-input-field__error-text"
              id="ec-input-field-error-2"
            >
              This is the from field error message
            </div>
          </div>
          <div
            class="ec-input-field ec-datepicker ec-date-range-filter__to-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-datepicker-3"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                To
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              autocomplete="off"
              class="ec-input-field__input tw-bg-gray-8 ec-input-field__input--has-icon flatpickr-input"
              data-test="ec-date-range-filter__to-input ec-datepicker ec-input-field__input ec-mock ec-tooltip-mock"
              id="ec-datepicker-3"
              type="text"
            />
            <!--v-if-->
            <div
              class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
              data-test="ec-input-field__icon-wrapper"
            >
              <!--v-if-->
              <svg
                class="ec-icon ec-input-field__icon"
                data-test="ec-input-field__icon"
                height="20"
                width="20"
              >
                <use
                  xlink:href="#ec-simple-calendar"
                />
              </svg>
            </div>
            <!--v-if-->
          </div>
        </div>
        <!--v-if-->
        <button
          class="ec-date-range-filter__clear-button"
          data-test="ec-date-range-filter__clear-button"
          type="button"
        >
          Clear dates
        </button>
      </div>
      
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDateRangeFilter > should render properly with an error message when the toErrorMessage is given 1`] = `
<div
  class="ec-filter-popover"
  data-test="ec-date-range-filter__trigger"
>
  <ec-stub
    autohide="true"
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <button
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
      type="button"
    >
      <span
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Due date"
      >
        Due date
      </span>
      <span
        class="ec-badge ec-badge--info ec-filter-popover__badge"
        data-test="ec-badge"
      >
        
        2
        
      </span>
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </button>
    
    
    <div
      class="ec-filter-popover__filter-content"
    >
      
      <div
        class="ec-date-range-filter"
        data-test="ec-date-range-filter"
      >
        <div
          class="ec-date-range-filter__inputs-wrapper"
        >
          <div
            class="ec-input-field ec-datepicker ec-date-range-filter__from-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-datepicker-1"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                From
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              autocomplete="off"
              class="ec-input-field__input tw-bg-gray-8 ec-input-field__input--has-icon flatpickr-input"
              data-test="ec-date-range-filter__from-input ec-datepicker ec-input-field__input ec-mock ec-tooltip-mock"
              id="ec-datepicker-1"
              type="text"
            />
            <!--v-if-->
            <div
              class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
              data-test="ec-input-field__icon-wrapper"
            >
              <!--v-if-->
              <svg
                class="ec-icon ec-input-field__icon"
                data-test="ec-input-field__icon"
                height="20"
                width="20"
              >
                <use
                  xlink:href="#ec-simple-calendar"
                />
              </svg>
            </div>
            <!--v-if-->
          </div>
          <div
            class="ec-input-field ec-datepicker ec-date-range-filter__to-input"
            data-test="ec-input-field"
          >
            <!--v-if-->
            <input
              aria-describedby="ec-input-field-error-4"
              autocomplete="off"
              class="ec-input-field__input tw-bg-gray-8 ec-input-field__input--has-error ec-input-field__input--has-icon flatpickr-input"
              data-test="ec-date-range-filter__to-input ec-datepicker ec-input-field__input ec-mock ec-tooltip-mock"
              id="ec-datepicker-3"
              type="text"
            />
            <!--v-if-->
            <div
              class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
              data-test="ec-input-field__icon-wrapper"
            >
              <!--v-if-->
              <svg
                class="ec-icon ec-input-field__icon"
                data-test="ec-input-field__icon"
                height="20"
                width="20"
              >
                <use
                  xlink:href="#ec-simple-calendar"
                />
              </svg>
            </div>
            <div
              class="ec-input-field__error-text"
              data-test="ec-input-field__error-text"
              id="ec-input-field-error-4"
            >
              This is the to field error message
            </div>
          </div>
        </div>
        <!--v-if-->
        <button
          class="ec-date-range-filter__clear-button"
          data-test="ec-date-range-filter__clear-button"
          type="button"
        >
          Clear dates
        </button>
      </div>
      
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDateRangeFilter > should render with custom attributes 1`] = `
<div
  class="ec-filter-popover my-class"
  data-test="my-data-test ec-date-range-filter__trigger"
  id="test-id"
>
  <ec-stub
    autohide="true"
    data-test="ec-stub ec-popover-stub"
    distance="8"
    placement="bottom-start"
    prevent-overflow="false"
  >
    
    <button
      class="ec-filter-popover__trigger"
      data-test="ec-filter-popover__trigger"
      type="button"
    >
      <span
        class="ec-filter-popover__label"
        data-test="ec-filter-popover__label"
        title="Due date"
      >
        Due date
      </span>
      <span
        class="ec-badge ec-badge--info ec-filter-popover__badge"
        data-test="ec-badge"
      >
        
        2
        
      </span>
      <svg
        class="ec-icon ec-icon--interactive ec-filter-popover__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-chevron-down"
        />
      </svg>
    </button>
    
    
    <div
      class="ec-filter-popover__filter-content"
    >
      
      <div
        class="ec-date-range-filter"
        data-test="ec-date-range-filter"
      >
        <div
          class="ec-date-range-filter__inputs-wrapper"
        >
          <div
            class="ec-input-field ec-datepicker ec-date-range-filter__from-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-datepicker-1"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                From
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              autocomplete="off"
              class="ec-input-field__input tw-bg-gray-8 ec-input-field__input--has-icon flatpickr-input"
              data-test="ec-date-range-filter__from-input ec-datepicker ec-input-field__input ec-mock ec-tooltip-mock"
              id="ec-datepicker-1"
              type="text"
            />
            <!--v-if-->
            <div
              class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
              data-test="ec-input-field__icon-wrapper"
            >
              <!--v-if-->
              <svg
                class="ec-icon ec-input-field__icon"
                data-test="ec-input-field__icon"
                height="20"
                width="20"
              >
                <use
                  xlink:href="#ec-simple-calendar"
                />
              </svg>
            </div>
            <!--v-if-->
          </div>
          <div
            class="ec-input-field ec-datepicker ec-date-range-filter__to-input"
            data-test="ec-input-field"
          >
            <label
              class="ec-input-field__label"
              data-test="ec-input-field__label"
              for="ec-datepicker-3"
            >
              <span
                class="ec-input-field__label-text"
                data-test="ec-input-field__label-text"
              >
                To
                <!--v-if-->
              </span>
              <!--v-if-->
            </label>
            <input
              autocomplete="off"
              class="ec-input-field__input tw-bg-gray-8 ec-input-field__input--has-icon flatpickr-input"
              data-test="ec-date-range-filter__to-input ec-datepicker ec-input-field__input ec-mock ec-tooltip-mock"
              id="ec-datepicker-3"
              type="text"
            />
            <!--v-if-->
            <div
              class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
              data-test="ec-input-field__icon-wrapper"
            >
              <!--v-if-->
              <svg
                class="ec-icon ec-input-field__icon"
                data-test="ec-input-field__icon"
                height="20"
                width="20"
              >
                <use
                  xlink:href="#ec-simple-calendar"
                />
              </svg>
            </div>
            <!--v-if-->
          </div>
        </div>
        <!--v-if-->
        <button
          class="ec-date-range-filter__clear-button"
          data-test="ec-date-range-filter__clear-button"
          type="button"
        >
          Clear dates
        </button>
      </div>
      
    </div>
    
  </ec-stub>
</div>
`;
